--- a/between_app/templates/between_app/personal_style/profile_test.html
+++ b/between_app/templates/between_app/personal_style/profile_test.html
@@ -5,17 +5,20 @@
 
 {%block content%}
 
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs mb-0"> <!-- modification in case clients use it before I develop a proper client section -->
   <li class="nav-item">
     <a class="nav-link {% if request.path|last_url == 'profile_test' %}active{% endif %}" href="{% url 'between_app:profile_test' %}">Therapist</a>
   </li>
   <li class="nav-item"> 
     <a class="nav-link {% if request.path|last_url == 'profile_test_client' %}active{% endif %}" href="{% url 'between_app:profile_test_client' %}">Client</a>
   </li>
-</ul>
-<div class="card mt-3 mb-4 warm-white">
+</ul><!-- close client section -->
 
-  <div class="card-header display-6 bg-primary-subtle border-primary p-3">Profile Test</div>
+
+
+<div class="card mt-0 mb-4 cold-white">
+
+  <div class="card-header display-6 soft-blue border-primary p-3">Profile Test</div>
   
 <div class="card-body p-3">
   <p>This is a little test to help you reflect about your preferred positions at the time of working with people.</p>
@@ -28,7 +31,7 @@
   👉 This test aims to help you reflect on your practice. It does not have algorithms behind (only adds two sliders). You can come back and move the sliders to find what feels right.
 </div>
 
-<div class="card bg-light-sutble">
+<div class="card bg-light-subtle">
   <div class="card-body">
     <h4 class="card-title">Profile Test</h4>
     
