--- a/between_app/templates/between_app/personal_style/profile_test_client.html
+++ b/between_app/templates/between_app/personal_style/profile_test_client.html
@@ -5,31 +5,32 @@
 
 {%block content%}
 
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs mb-0"> <!-- modification in case clients use it before I develop a proper client section -->
   <li class="nav-item">
     <a class="nav-link {% if request.path|last_url == 'profile_test' %}active{% endif %}" href="{% url 'between_app:profile_test' %}">Therapist</a>
   </li>
   <li class="nav-item"> 
     <a class="nav-link {% if request.path|last_url == 'profile_test_client' %}active{% endif %}" href="{% url 'between_app:profile_test_client' %}">Client</a>
   </li>
-</ul>
-<div class="card mt-3 mb-4 warm-white">
+</ul><!-- close client section -->
 
-  <div class="card-header display-6 bg-primary-subtle border-primary p-3">Profile Test Client</div>
+
+
+<div class="card mt-0 mb-4 cold-white">
+  <div class="card-header display-6 soft-blue border-primary p-3">Profile Test Client</div>
   
-<div class="card-body p-3">
-  <p>This is a little test to help you reflect about your preferred positions of care and other areas of life.</p>
-  <p>It is composed of questions regarding some preferences that add up to shape a profile connected with therapeutic traditions. It can help you find the type of therapist you may be looking for.</p>
+  <div class="card-body p-3">
+    <p>This is a little test to help you reflect about your preferred positions of care and other areas of life.</p>
+    <p>It is composed of questions regarding some preferences that add up to shape a profile connected with therapeutic traditions. It can help you find the type of therapist you may be looking for.</p>
     <p>You can review previous tests and see your scores to have a more nuanced sense.</p>
-  <p>The idea is for it to be flexible, and for it to be representative of yourself (let me know if it does not). I hope it can help you as a mirror that keeps track of your process.</p>
-<div
-  class="alert alert-info"
-  role="alert"
->
-  👉 This test aims to help you reflect on your positions. It does not have algorithms behind (only adds two sliders). You can come back and move the sliders to find what feels right.
-</div>
+    <p>The idea is for it to be flexible, and for it to be representative of yourself (let me know if it does not). I hope it can help you as a mirror that keeps track of your process.</p>
+  
+    <div
+      class="alert alert-info"role="alert">
+        👉 This test aims to help you reflect on your positions. It does not have algorithms behind (only adds two sliders). You can come back and move the sliders to find what feels right.
+    </div>
 
-<div class="card bg-light-sutble">
+<div class="card bg-light-subtle">
   <div class="card-body">
     <h4 class="card-title">Profile Test</h4>
     
