cleaning some design patterns on tests

--- a/between_app/templates/between_app/Components/components_test.html
+++ b/between_app/templates/between_app/Components/components_test.html
@@ -28,11 +28,9 @@ Components Test
 
   <h4 class="card-title m-3">
     How much do you use, or would your use, the following areas for your therapeutic work?</br>
-    <small>(If a client, you feel would benefit from)</small>
+    <small>(Or: how much would benefit from this areas?)</small>
   </h5>
   
-  
-  <div class="card bg-active p-2 mb-3">
   
   
     <form action="{% url 'between_app:profile_test' %}" method='post'>
