fixed error in the push destinations of the tests

--- a/between_app/templates/between_app/Components/components_test.html
+++ b/between_app/templates/between_app/Components/components_test.html
@@ -33,7 +33,7 @@ Components Test
   
   
   
-    <form action="{% url 'between_app:profile_test' %}" method='post'>
+    <form action="{% url 'between_app:components_test' %}" method='post'>
       {% csrf_token %}
       {% for field in form %}
 
