--- a/between_app/templates/between_app/BigTraditions/traditions_test.html
+++ b/between_app/templates/between_app/BigTraditions/traditions_test.html
@@ -25,7 +25,7 @@ Traditions Test
 
 {% if user.is_authenticated %}
   
-<form action="{% url 'between_app:profile_test' %}" method='post'>
+<form action="{% url 'between_app:traditions_test' %}" method='post'>
   {% csrf_token %}
   {% for field in form %}
 
