small changes in components tests texts

--- a/between_app/templates/between_app/Components/components_test.html
+++ b/between_app/templates/between_app/Components/components_test.html
@@ -14,7 +14,7 @@ Components Test
   
     <div class="card-body">
       <p class="card-title"> Please slide an approximation of how much you identify with these areas of work</p>
-      <p class="card-title">As a reference:</p>
+      <p class="card-title">A possible reference:</p>
       <ul class="list-group">
         <li class="list-group-item"><b>Curious:</b> a few ideas about a topic or model up to 20%</li>
         <li class="list-group-item"><b>Student:</b> Learning a model through study and practice, up to 40%</li>
