moved the base templates detaching them from between_app

--- a/accounts/templates/profile/delete.html
+++ b/accounts/templates/profile/delete.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {% block title %}Delete Account{%endblock title%}
 
 {% load django_bootstrap5 %}
