--- a/between_app/templates/between_app/BigTraditions/traditions_list.html
+++ b/between_app/templates/between_app/BigTraditions/traditions_list.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {%block title%}Big Traditions List{%endblock title %}
 
 {% block content %}
