--- a/techniques_app/templates/techniques_app/group_list.html
+++ b/techniques_app/templates/techniques_app/group_list.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 <!--Step to separate techniques by component-->
 {% block title %}Components list{% endblock title %}
 
