--- a/techniques_app/templates/techniques_app/techniques_list_community.html
+++ b/techniques_app/templates/techniques_app/techniques_list_community.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {% block title %}Public Techniques {% endblock title %}
 <!--Receives two functions, with different lists of techniques, one with compnent tittle one with all of them-->
 
