--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/cover.html' %}
+{% extends 'cover.html' %}
 {% load static %}
 {%block title%}CreaTherapy{%endblock title%}
 {% load django_bootstrap5%}
