--- a/accounts/templates/allauth/layouts/base.html
+++ b/accounts/templates/allauth/layouts/base.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {% load i18n %}
 {% load django_bootstrap5 %}
 {% bootstrap_css%}
