--- a/between_app/templates/between_app/personal_style/content.html
+++ b/between_app/templates/between_app/personal_style/content.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {%block title%} List {%endblock title %}
 {% load static %}
 {% block content %}
