--- a/dive_app/templates/dive_app/creating/creation_item.html
+++ b/dive_app/templates/dive_app/creating/creation_item.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {% block title%}{{creations.title}}{%endblock title%}
 
 {% block page_header %}{{creations.title|title}}{% endblock page_header%}
