--- a/learning_logs/templates/learning_logs/topic/new_entry.html
+++ b/learning_logs/templates/learning_logs/topic/new_entry.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {% block title %}New Entry{%endblock title%}
 
 {% block content%}
