--- a/techniques_app/templates/techniques_app/delete_saved.html
+++ b/techniques_app/templates/techniques_app/delete_saved.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 
 {% block title %}Saved Techniques {% endblock title %}
 {% load django_bootstrap5%}
