--- a/techniques_app/templates/techniques_app/index.html
+++ b/techniques_app/templates/techniques_app/index.html
@@ -1,4 +1,4 @@
-{% extends 'between_app/_base.html' %}
+{% extends '_base.html' %}
 {% block title %}Techniques{%endblock%}
 {% block page_header%}
 {% endblock page_header%}
