moved core templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 </div>
-{% include "between_app/about_texts.html" %}
+{% include "about_texts.html" %}
 
 
 {%endblock content%}
