--- a/templates/_base.html
+++ b/templates/_base.html
@@ -92,6 +92,9 @@
                 <li class="nav-item">
                   <a class="nav-link fw-light" href='/about/'>About</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link fw-light" href='/data-policy/'>Data Policy</a>
+                </li>
   
             </ul><!-- End of links on left side of nvbar -->
             <!-- Account related links-->
