changed image to svg

--- a/templates/cover.html
+++ b/templates/cover.html
@@ -7,8 +7,9 @@
 {% block intro %}
 
 <div class="cover-container ms-0 d-flex mx-auto flex-column mb-2"
-    style="background-image:url({% static 'between_app/images/crea-cover.png' %});
-    background-position:center;
+    style="background-image:url({% static 'between_app/images/cover-crea.svg' %});
+    background-position:50% 25%;
+    background-attachment:local;
     background-size:cover;
     height:80vh;
     width:100vw;
