--- a/templates/cover.html
+++ b/templates/cover.html
@@ -9,7 +9,7 @@
 <div class="cover-container ms-0 d-flex mx-auto flex-column mb-2"
     style="background-image:url({% static 'between_app/images/cover-crea.svg' %});
     background-position:50% 25%;
-    background-attachment:local;
+    background-attachment:fixed;
     background-size:cover;
     height:80vh;
     width:100vw;
