--- a/accounts/templates/turnstile/turnstile.html
+++ b/accounts/templates/turnstile/turnstile.html
@@ -1,3 +1,2 @@
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-
-  <div class="cf-turnstile" data-sitekey="{{key}}"></div>
+<div {% include "django/forms/widgets/attrs.html" %}"></div>
