--- a/accounts/templates/turnstile/turnstile.html
+++ b/accounts/templates/turnstile/turnstile.html
@@ -1,2 +1,2 @@
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-<div {% include "django/forms/widgets/attrs.html" %}"></div>
+<div {% include "django/forms/widgets/attrs.html" %}></div>
