--- a/accounts/templates/allauth/elements/form.html
+++ b/accounts/templates/allauth/elements/form.html
@@ -1,4 +1,5 @@
 {% load allauth %}
+<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 {% for err in attrs.form.non_field_errors %}<div class="alert alert-danger">{{ err }}</div>{% endfor %}
 <form class="{% block form_class %}{% if not attrs.no_visible_fields %}card{% endif %}{% endblock %}"
       method="{{ attrs.method }}"
